--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title class="grid_item">cSS Grid Library 2020</title>
-    <link rel="stylesheet" href="css-grid-library.css">
+    <link rel="stylesheet" href="grid.css">
     <style>
         .grid {
-            background: #7600ed;
-
+            background: #7600ed
         }
 
         .grid>div {
-            background: #00ff5e;
-
+            background: #00ff5e
         }
+
     </style>
 </head>
 
 <body style="margin: 0; background: #000000;">
 
     <section class="section p(1)">
-        <div class="grid cols(100x)">
+
+
+        <!--        <div class="grid cols(2) size(1s-1m)">-->
+        <div class="grid cols(2) size(small,medium)">
+            <div class="grid_item">col</div>
+            <div class="grid_item">col</div>
+            <div class="grid_item col(-1)">col</div>
+        </div>
+
+<div class="grid cols(100x)">
             <div class="grid_item">col</div>
             <div class="grid_item">col</div>
             <div class="grid_item">col</div>
@@ -145,7 +153,7 @@
             <div class="grid_item">col</div>
             <div class="grid_item">col</div>
         </div>
-        <div class="grid cols(3) size(1s-1l-1s)">
+        <div class="grid cols(3) size(small, large, small)">
             <div class="grid_item">col</div>
             <div class="grid_item">col</div>
             <div class="grid_item">col</div>
@@ -253,4 +261,6 @@
             <div class="grid_item col(-1)">col</div>
         </div>
     </section>
-</body></html>
+</body>
+
+</html>
